# mp4_audio_extractor

./: Cargo.toml  README.md
src/: error.rs  extractor.rs  lib.rs
tests/: integration_tests.rs
tests/common/: mod.rs  test_samples.rs
